# mcp-openapi

./: Dockerfile  README.md  pyproject.toml  smithery.yaml
.github/workflows/: ci.yml  release.yml
mcp_openapi/: api_client.py  async_typer.py  cli.py  server.py  settings.py  spec_handlers.py
tests/: conftest.py  todos.py
tests/specs/: httpbin.dmuth.org-openapi-3-1-0.json  petstore31.swagger.io-openapi-3-1.yaml  todos-openapi-3-1.json
