[project]
name = "mcp-openapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.12",
    "mcp[cli]>=1.3.0",
    "pydantic-settings>=2.8.0",
    "pyyaml>=6.0.2",
    "typer>=0.15.1",
    "fastapi>=0.115.8",
    "openapi3-parser>=1.1.19",
]
[project.scripts]
mcp-openapi = "mcp_openapi.cli:app"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "fastapi[standard]>=0.115.8",
    "mypy>=1.15.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]
