[project]
name = "mcp-openapi"
version = "0.0.2"
description = "A Model Context Protocol bridge to OpenAPI servers"
readme = "README.md"
authors = [{ name = "Ross Masters", email = "ross@rossmasters.com" }]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.12",
    "mcp[cli]>=1.3.0",
    "pydantic-settings>=2.8.0",
    "pyyaml>=6.0.2",
    "typer>=0.15.1",
    "fastapi>=0.115.8",
    "openapi3-parser>=1.1.19",
]
license = "MIT"
[project.scripts]
mcp-openapi = "mcp_openapi.cli:app"

[project.urls]
Homepage = "https://github.com/rmasters/mcp-openapi"
Issues = "https://github.com/rmasters/mcp-openapi/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_openapi"]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.115.8",
    "mypy>=1.15.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]
